added cpanminus sub-section

--- a/templates/index.html
+++ b/templates/index.html
@@ -156,6 +156,14 @@ pageTracker._trackPageview();
                 <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=smokebrew">RT Queue</a>)</li>
           </ul>
 
+          <h3>cpanminus Smoke Tools</h3>
+          <p>The following downloads relate to the tools built on the cpanminus installation tool.</p>
+          <ul>
+            <li><a href="https://metacpan.org/release/App-cpanminus-reporter">App-cpanminus-reporter</a> 
+                (<a href="https://github.com/garu/App-cpanminus-reporter">GitHub</a> / 
+                <a href="https://rt.cpan.org/Dist/Display.html?Name=App-cpanminus-reporter">RT Queue</a>)</li>
+          </ul>
+
           <h3>Common Smoker Client Packages</h3>
           <p>The following downloads relate to the common libraries used by the smoke test clients.</p>
           <ul>
