added Reports links

--- a/templates/index.html
+++ b/templates/index.html
@@ -274,7 +274,9 @@ pageTracker._trackPageview();
           <p>The following data files and tools for building the current website are not currently available. 
           This will change as soon as I have time to properly package all the moving parts.</p>
           <ul>
-            <li>CPAN-Testers-WWW-Reports (GitHub / RT queue) .. coming soon</li>
+            <li><a href="https://metacpan.org/release/CPAN-Testers-WWW-Reports">CPAN-Testers-WWW-Reports</a> 
+            (<a href="https://github.com/barbie/cpan-testers-www-reports/tree">GitHub</a> / 
+            <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Reports">RT queue</a>)</li>
           </ul>
 
           <h3>CPAN Testers Reports Parser</h3>
