added notes about Labyrinth sites

--- a/templates/index.html
+++ b/templates/index.html
@@ -272,7 +272,8 @@ pageTracker._trackPageview();
           <h3>CPAN Testers Reports</h3>
           <p>Downloads for the CPAN Testers Reports website</p>
           <p>The following data files and tools for building the current website are not currently available. 
-          This will change as soon as I have time to properly package all the moving parts.</p>
+          This will change as soon as I have time to properly package all the moving parts.
+          Note that this is a <a href="http://labyrinth.missbarbell.co.uk">Labyrinth</a> based site.</p>
           <ul>
             <li><a href="https://metacpan.org/release/CPAN-Testers-WWW-Reports">CPAN-Testers-WWW-Reports</a> 
             (<a href="https://github.com/barbie/cpan-testers-www-reports/tree">GitHub</a> / 
@@ -320,7 +321,8 @@ pageTracker._trackPageview();
           <h3>CPAN Testers Preferences</h3>
           <p>Downloads for the CPAN Testers Preferences website</p>
           <p>The following data files and tools for building the current website are not currently available. 
-          This will change as soon as I have time to properly package all the moving parts.</p>
+          This will change as soon as I have time to properly package all the moving parts.
+          Note that this is a <a href="http://labyrinth.missbarbell.co.uk">Labyrinth</a> based site.</p>
           <ul>
             <li><a href="https://metacpan.org/release/CPAN-Testers-WWW-Preferences">CPAN-Testers-WWW-Blog</a> 
             (<a href="https://github.com/barbie/cpan-testers-www-preferences/tree">GitHub</a> / 
