added Admin site entry

--- a/templates/index.html
+++ b/templates/index.html
@@ -329,6 +329,16 @@ pageTracker._trackPageview();
             <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Preferences">RT queue</a>)</li>
           </ul>
 
+          <h3>CPAN Testers Admin</h3>
+          <p>Downloads for the CPAN Testers Admin website</p>
+          <p>The following data files and tools are provided for use in building and expanding the website. 
+          Note that this is a <a href="http://labyrinth.missbarbell.co.uk">Labyrinth</a> based site.</p>
+          <ul>
+            <li><a href="https://metacpan.org/release/CPAN-Testers-WWW-Admin">CPAN-Testers-WWW-Admin</a> 
+            (<a href="https://github.com/barbie/cpan-testers-www-admin">GitHub</a> / 
+            <a href="http://rt.cpan.org/Public/Dist/Display.html?Name=CPAN-Testers-WWW-Admin">RT queue</a>)</li>
+          </ul>
+
           <h3>CPAN Testers Development</h3>
           <p>Downloads for the CPAN Testers Development website</p>
           <p>The following data files and tools for building the current website are not currently available. 
