--- a/templates/index.html
+++ b/templates/index.html
@@ -91,6 +91,11 @@ pageTracker._trackPageview();
             <li><a href='http://stats.cpantesters.org/cpanmail.html'>Find A Tester</a></li>
             </ul>
 
+<div class="adverts">
+<h1>Our Sponsors</h1>
+<div id="iheart"></div>
+</div>  
+
             [% INCLUDE "quote.html" %]
         </div>
 
@@ -375,29 +380,29 @@ pageTracker._trackPageview();
     <!-- C. FOOTER AREA -->      
     <div class="footer">
       <p>
-      The CPAN Testers server is supported and funded by <a href="http://birmingham.pm.org">Birmingham Perl Mongers</a>.<br />
-      CPAN Testers Development v[% VERSION %].
-      &copy; 2008-2015 CPAN Testers. Comments and design patches to <a href="mailto:barbie@cpan.org">barbie@cpan.org</a>.
-    <p>
-    
-		<p>
-    The CPAN Testers Family: <br />
-      <a href="http://blog.cpantesters.org"     title="CPAN Testers Blog"       >Blog</a>         &#8226;
-      <a href="http://www.cpantesters.org"      title="CPAN Testers Reports"    >Reports</a>      &#8226;
-      <a href="http://wiki.cpantesters.org"     title="CPAN Testers Wiki"       >Wiki</a>         &#8226;
-      <a href="http://stats.cpantesters.org"    title="CPAN Testers Statistics" >Statistics</a>   &#8226;
-      <a href="http://pass.cpantesters.org"     title="CPAN Testers PASS Matrix">PASS Matrix</a>  &#8226;
-      <a href="http://prefs.cpantesters.org"    title="CPAN Testers Preferences">Preferences</a>  &#8226;
-      <a href="http://metabase.cpantesters.org" title="CPAN Testers Metabase"   >Metabase</a>     &#8226;
-      <a href="http://devel.cpantesters.org"    title="CPAN Testers Development">Development</a>  &#8226;
-      <a href="http://deps.cpantesters.org"     title="CPAN Dependencies"       >Dependencies</a> &#8226;
-      <a href="http://matrix.cpantesters.org"   title="CPAN Testers Matrix"     >Matrix</a>       &#8226;
-      <a href="http://analysis.cpantesters.org" title="CPAN Testers Analysis"   >Analysis</a>     &#8226;
-      <a href="http://admin.cpantesters.org"    title="CPAN Testers Admin"      >Admin</a>
+        CPAN Testers Development v[% VERSION %].
+        &copy; 2008-2016 CPAN Testers. Comments and design patches to <a href="mailto:barbie@cpan.org">barbie@cpan.org</a>.
       </p>
-    <p>
-    CPAN Testers, supporting the Perl programming language since 1999.
-    </p>
+    
+      <p>
+        The CPAN Testers Family: <br />
+        <a href="http://blog.cpantesters.org"     title="CPAN Testers Blog"       >Blog</a>         &#8226;
+        <a href="http://www.cpantesters.org"      title="CPAN Testers Reports"    >Reports</a>      &#8226;
+        <a href="http://wiki.cpantesters.org"     title="CPAN Testers Wiki"       >Wiki</a>         &#8226;
+        <a href="http://stats.cpantesters.org"    title="CPAN Testers Statistics" >Statistics</a>   &#8226;
+        <a href="http://pass.cpantesters.org"     title="CPAN Testers PASS Matrix">PASS Matrix</a>  &#8226;
+        <a href="http://prefs.cpantesters.org"    title="CPAN Testers Preferences">Preferences</a>  &#8226;
+        <a href="http://metabase.cpantesters.org" title="CPAN Testers Metabase"   >Metabase</a>     &#8226;
+        <a href="http://devel.cpantesters.org"    title="CPAN Testers Development">Development</a>  &#8226;
+        <a href="http://deps.cpantesters.org"     title="CPAN Dependencies"       >Dependencies</a> &#8226;
+        <a href="http://matrix.cpantesters.org"   title="CPAN Testers Matrix"     >Matrix</a>       &#8226;
+        <a href="http://analysis.cpantesters.org" title="CPAN Testers Analysis"   >Analysis</a>     &#8226;
+        <a href="http://admin.cpantesters.org"    title="CPAN Testers Admin"      >Admin</a>
+      </p>
+
+      <p>
+        CPAN Testers, supporting the Perl programming language since 1999.
+      </p>
     </div>
 
   </div> 
